# chat-app

./: .dockerignore  .env  .gitignore  pyproject.toml
_docker/: .env.dev  Dockerfile  docker-compose.yml
src/: entrypoint.sh  manage.py
src/_project/: asgi.py  settings.py  urls.py  wsgi.py
src/_project/static/js/: htmx.min.js
src/accounts/: admin.py  api_views.py  forms.py  models.py  serializers.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_alter_user_options.py
src/accounts/templates/accounts/: signup.html
src/accounts/templates/registration/: logged_out.html  login.html  signup.html
src/chat/: admin.py  api_urls.py  api_views.py  consumers.py  forms.py  models.py  routing.py  serializers.py  urls.py  utils.py  views.py
src/chat/migrations/: 0001_initial.py  0002_room_created_at_room_room_type_alter_room_name_and_more.py  0003_roomreadstate.py
src/chat/templates/chat/: _room_detail.html  dashboard.html  room.html  room_detail.html  room_form.html  room_list.html
src/chat/templatetags/: chat_extras.py
src/theme/static_src/src/: styles.css
src/theme/templates/: base.html
